tester/testsuite/good/core020.yal
fn main() -> int {
    p();
    printInt(1);
    return 0;
}

fn p() {}
