tester/testsuite/bad/array01.yal

fn main() -> int {
let a: int[1];
  return 0;
}
